--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2574,6 +2574,7 @@ input, select, textarea {
 				position: relative;
 				display: block;
 				width: 100%;
+				height:80%;
 				border-radius: 4px;
 				overflow: hidden;
 			}
