--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2579,6 +2579,10 @@ input, select, textarea {
 				overflow: hidden;
 			}
 
+			span.image {
+			height:80%;
+		}
+
 				.tiles article > .image img {
 					display: block;
 					width: 100%;
