Back to the original

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2578,6 +2578,11 @@ input, select, textarea {
 				overflow: hidden;
 			}
 
+				.tiles article > .image img {
+					display: block;
+					width: 100%;
+				}
+
 				.tiles article > .image:before {
 					pointer-events: none;
 					-moz-transition: background-color 0.5s ease, opacity 0.5s ease;
