--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2581,6 +2581,7 @@ input, select, textarea {
 				.tiles article > .image img {
 					display: block;
 					width: 100%;
+					height:100%; 
 				}
 
 				.tiles article > .image:before {
