--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3312,16 +3312,25 @@ input, select, textarea {
 			}
 
 		}
-/* styling posts from old blog */
+/* styling posts from old blog
 .aa-wrapper{
 	padding: 50px;
-}
+} */
 .quote{
 	font-size: 1.8em;
 	border-left: 5px solid;
 	margin: 25px auto;
 	padding-left: 10px;
 	transition: border .5s;
+}
+@media screen and (max-width: 480px){
+.quote{
+	font-size: 1.3em;
+	border-left: 5px solid;
+	margin: 25px auto;
+	padding-left: 10px;
+	transition: border .5s;
+}
 }
 .quote:hover{
 	border-color: black
@@ -3331,14 +3340,22 @@ input, select, textarea {
 	font-family: 'Josefin Sans', sans-serif;
 	font-weight: 300;
 }
-.subhead{
-	font-size: 2em;
-	width: auto;
-	margin-bottom: 5px;
-	padding-left: 5px;
-	border-bottom: 1px solid;
+@media screen and (max-width: 480px){
+.aa-heading{
+	font-size: 2.1em;
+	font-family: 'Josefin Sans', sans-serif;
+	font-weight: 300;
 }
-@media screen and (max-width: 736px){
+}
+.subhead {
+    font-size: 2em;
+    width: auto;
+    margin-bottom: 5px;
+    padding-left: 5px;
+    border-bottom: 1px solid;
+}
+
+@media screen and (max-width: 480px){
 .subhead{
 	font-size: 1.5em;
 	width: auto;
@@ -3353,9 +3370,25 @@ input, select, textarea {
 	margin: 10px auto;
 	box-shadow: 0 0 10px black;
 }
+@media screen and (max-width: 480px){
+.aa-img{
+	display: block;
+	max-width: 263px;
+	margin: 10px auto;
+	box-shadow: 0 0 10px black;
+}
+}
 .aa-para{
 	font-size: 1em;
 	font-family: 'Niramit', sans-serif;
+	
+}
+@media screen and (max-width: 480px){
+.aa-para{
+	font-size: 1em;
+	font-family: 'Niramit', sans-serif;
+	
+}
 }
 
 .aa-sectioning{
@@ -3368,7 +3401,11 @@ input, select, textarea {
 	margin: 10px;
 
 }
-
+@media screen and (max-width: 720px){
+.aa-sectioning > *{
+	flex-basis: 100%;
+}
+}
 .aa-sectioning > img{
 	max-width: 45%;
 	box-shadow: 0 0 10px black;
@@ -3398,22 +3435,27 @@ input, select, textarea {
 	outline: 1px solid gray;
 }
 .aa-slider{
-	border: 5px solid black;
+	/*border: 5px solid black;*/
 	margin: 60px auto;
 }
 
 @media (max-width: 600px){
 .aa-sectioning > img{
 	display: block;
-	max-width: 250px;
+	max-width: 100%;
 	margin: 10px auto;
 	max-height: 266px !important;
 }
-.aa-sectioning > *{
-	flex-basis: 100%;
-	margin: 10px;
-
 }
+@media (max-width: 736px){
+.aa-sectioning > img{
+	display: block;
+	/*max-width: 80%;/
+	margin: 10px auto;
+	max-height: 266px !important;
+}
+}
+
 .aa-sectioning3{
 	flex-wrap: wrap;
 }
