added books to bookshelf

--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -2590,10 +2590,10 @@ input, select, textarea {
 
 				.tiles article > .image img {
 					display: block;
-					width: 100%;
+					width: 50%;
+					margin-left: 25%;
 				}
 
-				
 
 				.tiles article > .image:before {
 					pointer-events: none;
