fixed mobile nav bar bug

--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -3549,3 +3549,13 @@ iframe{
 		width: 100%;
 	}
 }
+
+@media only screen and (max-width: 768px) {
+	.mobileHide{ 
+		visibility: hidden;
+	}
+
+	.navBar{ 
+		margin: 10%;
+	}
+} 
