--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,5 @@
 body {
-  background: $brand-color;
+  background: black;
   color: $text-color;
   font-family: $font-family;
   font-size: 1.3125em;
