--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,14 +21,10 @@
   </head>
   <body>
 
-    {% if page.layout == 'home' %}
-      <a href="#main" class="skip-navigation">
-        Skip to list of posts
-      </a>
+    {% if page.layour == 'home' %}
+     
     {% else %}
-      <a href="#main" class="skip-navigation">
-        Skip to content
-      </a>
+    
     {% endif %}
 
     {{ content }}
@@ -42,7 +38,7 @@
     {% unless site.hide_credits %}
       <aside class="site-credits">
         <p>
-          <small><a href="https://github.com/patdryburgh/hitchens">Hitchens Theme</a> powered by <a href="http://jekyllrb.com">Jekyll</a></small>
+          <small>Amor Sapientiae</small>
         </p>
       </aside>
     {% endunless %}
