--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
-$brand-color:         #ffffff;
+$brand-color:         #fede00;
 $highlight:           lighten($brand-color, 35%);
-$text-color:          #000000;
-$muted-text-color:    #454545;
+$text-color:          #0b0404;
+$muted-text-color:    #64644B;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
