--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,7 +8,7 @@ body {
 
 h1 {
   font-size: 3em;
-  margin: .2em auto;
+  margin: .5em auto;
 }
 
 h2 {
@@ -81,14 +81,6 @@ p > cite {
   text-align: right;
 }
 
-p:first-child:first-letter {
-  display:block;
-  float:left;
-  font-size:3em;
-  line-height:0.9em;
-  padding: 0 7px;
-}
-
 hr {
   border: 0;
   height: 0;
@@ -97,11 +89,10 @@ hr {
 }
 
 img {
-  float:left;
   display: flex;
   max-width: 100%;
   height: auto;
-  margin: .9em auto;
+  margin: 2em auto;
 }
 
 figure img {
@@ -124,12 +115,12 @@ figcaption {
 .home {
   max-width: 24em;
   margin: auto;
-  padding: 2em 0em;
+  padding: 4em 1em;
 }
 
 .content-title {
   font-size: 2em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   text-align: center;
 }
 
